Mar 19 2004  devel  Merged earthamap map source support from Ryan Maple
                    Added autoscale map selection to Earthamap and Terraserver
                    Marked Mapblast and Mappoint sources as defunct
                    Added earthamap script to makefile and cvs
                    Removed 'total' networks from legend, left 'visible'.
                     Total didn't make much sense.
                    New gpsmap labeling method, labels now drawn in the order
                     given, added new labels, bssid, ssid, manuf, info,
                     location
                    Tweaked labeling
Mar 18 2004  devel  Fixed expat error
Mar 17 2004  devel  Tweaked gpsmap to error out on no sample points
                    Fixed error string typo in get_ssid
                    Changed monitor mode controls to not nuke most SSIDs since
                     drivers don't seem to mind anymore, also updated prism54
                     and fixed a compile warning on acx100
                    Tweaked configure/makefiles to not allow 'make gpsmap' if
                     it wasn't enabled by configure
Mar 16 2004  devel  Tweaked acx100 source to match acx's new orinoco-esque
                     method
Mar 15 2004  devel  Finished gpsxml-sanitize, util takes a xml files and prints
                     the valid points back to stdout.
                    Fixed sending a removed network as a NETWORK statement
                     during the initial NETWORK enable seed
Mar 14 2004  devel  Split gpsmap sample manipulation voodoo off into its own
                     file for other utils to tie into
                    Started adding extras/ util to sanitize XML files for other
                     programs to use
Mar 13 2004  devel  Updated readme, added client column lists
                    Added unmonitor support for madwifi
                    Added switch to gpsmap to use old pure-average network 
                     center finding code