@@ -1,3 +1,4 @@
+Mar 20 2004  devel  Fixed gpsmap trying to autoscale even with user scales
 Mar 19 2004  devel  Merged earthamap map source support from Ryan Maple
                     Added autoscale map selection to Earthamap and Terraserver
                     Marked Mapblast and Mappoint sources as defunct
